k8s/infra/ingress/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timemgt-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.timemgt.com
    http:
      paths:
      - path: /gateway
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
