k8s/infra/ingress/db-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timemgt-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.db-manager.com
    http:
      paths:
      - path: /dbman
        pathType: Prefix
        backend:
          service:
            name: db-manager-service
            port:
              number: 80
