k8s/infra/ingress/employee-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timemgt-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.employee-service.com
    http:
      paths:
      - path: /employee
        pathType: Prefix
        backend:
          service:
            name: employee-service
            port:
              number: 80
