k8s/infra/ingress/file-generator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timemgt-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.filegen-service.com
    http:
      paths:
      - path: /filegen
        pathType: Prefix
        backend:
          service:
            name: file-generator-service
            port:
              number: 80
