k8s/infra/ingress/payslip-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timemgt-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.payslip-service.com
    http:
      paths:
      - path: /payslip
        pathType: Prefix
        backend:
          service:
            name: payslip-service
            port:
              number: 80
