k8s/infra/ingress/time-log-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timemgt-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.time-log-service.com
    http:
      paths:
      - path: /timelog
        pathType: Prefix
        backend:
          service:
            name: time-log-service
            port:
              number: 80
